assets/css/main.scss
@import './fonts/inter.css';
@import './fonts/karantina.css';
@import './normalize.css';
@import './variables.scss';

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Inter';
  font-weight: 500;
  line-height: normal;
  font-style: normal;
}

// reset
a {
  text-decoration: none;
}
button {
  background: transparent;
  border: none;
  padding: 0;
  &:hover {
    cursor: pointer;
  }
}
h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}
ul, ol {
  margin: 0;
  padding: 0;
  list-style: none;
}

.wrap-container {
  max-width: calc(1280px + 20px + 20px);
  padding: 0 20px;
  width: 100%;
  margin: 0 auto;
  @media (max-width: 575px) {
    max-width: calc(1280px + 15px + 15px);
    padding: 0 15px;
    
  }
}

.main-content {
  margin-top: 42px;
}

.text-primary {
  color: var(--primary)
}

.privacy,
.imprint {
  color: var(--grey);
  font-size: var(--text-4-font-size);
  word-break: break-all;
  h2 {
    font-size: var(--header-2-font-size);
    margin-top: 30px;
    margin-bottom: 22px;
    font-weight: 600;
  }
  h3 {
    font-size: var(--header-4-font-size);
    font-weight: 600;
  }
  h3, p, ul, ol {
    margin-bottom: 15px;
  }
  p, li, a, div {
    font-weight: 400;
  }
  a {
    word-break: break-all;
  }
  ol > li {
    margin-left: 16px;
    padding-left: 22px;
    position: relative;
    &::before {
      content: '';
      height: 0.65rem;
      width: 0.65rem;
      background-color: var(--grey);
      border-radius: 50%;
      position: absolute;
      top: calc(50% - 1px);
      left: 0;
      transform: translateY(-50%);
      
    }
  }
  a {
    color: var(--primary);
  }
}

